# bb-remote-asset

./: .bazelrc  AUTHORS  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  go_dependencies.bzl  pnpm-lock.yaml
.github/workflows/: branches.yaml  main.yaml  master.yaml  pull-requests.yaml  scorecard.yml
cmd/bb_asset_hub/: BUILD.bazel  main.go
cmd/bb_remote_asset/: BUILD.bazel  main.go
internal/mock/: BUILD.bazel
internal/mock/aliases/: BUILD.bazel  aliases.go
patches/com_buildbarn_bb_storage/: workflows.diff
patches/com_github_bazelbuild_remote_apis/: golang.diff
pkg/configuration/: BUILD.bazel  new_asset_store.go  new_fetcher.go  new_pusher.go
pkg/fetch/: BUILD.bazel  action_caching_fetcher.go  auth_headers.go  authorizing_fetcher.go  authorizing_fetcher_test.go  caching_fetcher.go  caching_fetcher_test.go  coalescing_fetcher.go  coalescing_fetcher_test.go  error_fetcher.go  fetch_server.go  fetcher.go  fetching_fetcher.go  http_fetcher.go  http_fetcher_test.go  local_caching_fetcher.go  local_caching_fetcher_test.go  logging_fetcher.go  metrics_fetcher.go  not_found_fetcher.go  policy_fetcher.go  policy_fetcher_test.go  remote_execution_fetcher.go  unimplemented_fetcher.go  utils.go  validating_fetcher.go  validating_fetcher_test.go
pkg/proto/asset/: BUILD.bazel  asset.pb.go  asset.proto
pkg/proto/configuration/bb_asset_hub/: BUILD.bazel  bb_asset_hub.proto
pkg/proto/configuration/bb_asset_hub/fetch/: BUILD.bazel  fetcher.proto
pkg/proto/configuration/bb_remote_asset/: BUILD.bazel  bb_remote_asset.pb.go  bb_remote_asset.proto
pkg/proto/configuration/bb_remote_asset/fetch/: BUILD.bazel  fetcher.pb.go  fetcher.proto
pkg/proto/configuration/bb_remote_asset/push/: BUILD.bazel  pusher.proto
pkg/push/: BUILD.bazel  action_caching_push_server.go  action_caching_pusher.go  authorizing_push_server.go  authorizing_push_server_test.go  error_push_server.go  error_pusher.go  local_caching_pusher.go  local_caching_pusher_test.go  logging_pusher.go  metrics_push_server.go  push_server.go  push_server_test.go  success_pusher.go  validating_pusher.go
pkg/qualifier/: BUILD.bazel  qualifier_set.go  qualifier_sorter.go  qualifier_translator.go  qualifier_translator_test.go
pkg/storage/: BUILD.bazel  action_cache_asset_store.go  action_cache_asset_store_test.go  asset.go  asset_reference.go  asset_reference_test.go  asset_store.go  asset_store_test.go  authorizing_asset_store.go  authorizing_asset_store_test.go  blob_access_asset_store.go  blob_access_asset_store_test.go  digest.go  qualifier_container.go  reference_store.go
pkg/storage/blobstore/: BUILD.bazel  asset_blob_access_creator.go  asset_blob_access_replicator.go  asset_read_buffer_factory.go  asset_storage_type.go
pkg/translator/: BUILD.bazel  request_translator.go
tools/: BUILD.bazel
tools/github_workflows/: BUILD.bazel  github_workflows.jsonnet  workflows_template.libsonnet
