module(name = "com_github_buildbarn_bb_remote_asset")

bazel_dep(name = "com_github_buildbarn_bb_storage")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "jsonnet_go", version = "0.20.0")
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_jsonnet", version = "0.6.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

git_override(
    module_name = "com_github_buildbarn_bb_storage",
    commit = "07366c6f20a1af59514be32a349af56f1960a267",
    remote = "https://github.com/buildbarn/bb-storage.git",
)

git_override(
    module_name = "bazel_remote_apis",
    commit = "253013303c9e1d52ebdeb5a3f0f869919e882f20",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

single_version_override(
    module_name = "gazelle",
    patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_bazelbuild_buildtools",
    "com_github_golang_mock",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_lint",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cncf/xds/go",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
    path = "github.com/grpc-ecosystem/go-grpc-prometheus",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_sys/o-search.diff"],
    path = "golang.org/x/sys",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "14.0.0",
)
use_repo(llvm, "llvm_toolchain_llvm")
