load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-asset-hub/cmd/bb_asset_hub",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/configuration/bb_asset_hub:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/global:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/grpc:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_gorilla_mux//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bb_asset_hub",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_asset_hub_container",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_asset_hub_container_push",
    component = "bb-browser",
    image = ":bb_asset_hub_container",
)
