load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_remote_asset_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-asset/cmd/bb_remote_asset",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/configuration",
        "//pkg/fetch",
        "//pkg/proto/configuration/bb_remote_asset",
        "//pkg/push",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bb_remote_asset",
    embed = [":bb_remote_asset_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_remote_asset_container",
    embed = [":bb_remote_asset_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_remote_asset_container_push",
    component = "bb-remote-asset",
    image = ":bb_remote_asset_container",
)
