load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_remote_asset_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-asset/cmd/bb_remote_asset",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/configuration",
        "//pkg/proto/configuration/bb_remote_asset",
        "//pkg/push",
        "//pkg/storage",
        "@bazel_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_remote_asset",
    embed = [":bb_remote_asset_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_remote_asset_container",
    binary = ":bb_remote_asset",
)

container_push_official(
    name = "bb_remote_asset_container_push",
    component = "bb-remote-asset",
    image = ":bb_remote_asset_container",
)
