# gazelle:ignore

load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

gomock(
    name = "blobstore",
    out = "blobstore.go",
    interfaces = [
        "BlobAccess",
        "HTTPClient",
    ],
    library = "@com_github_buildbarn_bb_storage//pkg/blobstore",
    package = "mock",
)

gomock(
    name = "aliases",
    out = "aliases.go",
    interfaces = [
        "ReadCloser",
    ],
    library = "//internal/mock/aliases",
    package = "mock",
)

gomock(
    name = "fetcher",
    out = "fetcher.go",
    interfaces = ["Fetcher"],
    library = "//pkg/fetch",
    package = "mock",
)

go_library(
    name = "go_default_library",
    srcs = [
        ":aliases.go",
        ":blobstore.go",
        ":fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/internal/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/qualifier",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/local",
        "@com_github_buildbarn_bb_storage//pkg/builder",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
        "@com_github_golang_mock//gomock:go_default_library",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
    ],
)
