load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "new_fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-asset-hub/pkg/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fetch:go_default_library",
        "//pkg/proto/configuration/bb_asset_hub/fetch:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
