load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "configuration",
    srcs = [
        "new_asset_store.go",
        "new_fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fetch",
        "//pkg/proto/configuration/bb_remote_asset",
        "//pkg/proto/configuration/bb_remote_asset/fetch",
        "//pkg/storage",
        "//pkg/storage/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/http",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
