load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fetch",
    srcs = [
        "auth_headers.go",
        "authorizing_fetcher.go",
        "caching_fetcher.go",
        "error_fetcher.go",
        "fetcher.go",
        "http_fetcher.go",
        "logging_fetcher.go",
        "metrics_fetcher.go",
        "remote_execution_fetcher.go",
        "validating_fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/fetch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/asset",
        "//pkg/qualifier",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "fetch_test",
    srcs = [
        "authorizing_fetcher_test.go",
        "caching_fetcher_test.go",
        "http_fetcher_test.go",
        "validating_fetcher_test.go",
    ],
    deps = [
        ":fetch",
        "//internal/mock",
        "//pkg/proto/asset",
        "//pkg/qualifier",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
