load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "action_caching_pusher.go",
        "error_pusher.go",
        "local_caching_pusher.go",
        "logging_pusher.go",
        "success_pusher.go",
        "validating_pusher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/push",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage:go_default_library",
        "//pkg/translator:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

#go_test(
#    name = "go_default_test",
#    srcs = ["local_caching_pusher_test.go"],
#    embed = [":go_default_library"],
#    deps = [
#        "//internal/mock:go_default_library",
#        "//pkg/proto/asset:go_default_library",
#        "//pkg/storage:go_default_library",
#        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
#        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
#        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer:go_default_library",
#        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
#        "@com_github_golang_mock//gomock:go_default_library",
#        "@com_github_golang_protobuf//proto:go_default_library",
#        "@com_github_stretchr_testify//require:go_default_library",
#        "@org_golang_google_grpc//codes:go_default_library",
#        "@org_golang_google_grpc//status:go_default_library",
#    ],
#)
#

go_test(
    name = "go_default_test",
    srcs = ["local_caching_pusher_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/proto/asset:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
