load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "push",
    srcs = [
        "metrics_push_server.go",
        "push_server.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/push",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "push_test",
    srcs = ["push_server_test.go"],
    deps = [
        ":push",
        "//internal/mock",
        "//pkg/proto/asset",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_golang_mock//gomock",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
