load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "qualifier_set.go",
        "qualifier_sorter.go",
        "qualifier_translator.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/qualifier",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["qualifier_translator_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:go_default_library"],
)
