load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "qualifier",
    srcs = [
        "qualifier_set.go",
        "qualifier_sorter.go",
        "qualifier_translator.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/qualifier",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
    ],
)

go_test(
    name = "qualifier_test",
    srcs = ["qualifier_translator_test.go"],
    deps = [
        ":qualifier",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:asset",
    ],
)
