load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "qualifier",
    srcs = [
        "qualifier_set.go",
        "qualifier_sorter.go",
        "qualifier_translator.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-asset/pkg/qualifier",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
    ],
)

go_test(
    name = "qualifier_test",
    srcs = ["qualifier_translator_test.go"],
    deps = [
        ":qualifier",
        "@bazel_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
    ],
)
